[tool.poetry]
name = "simintprototype"
version = "0.1.0"
description = ""
authors = ["Everton Colling <evertoncolling@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cognite-sdk = "^3.4.0"
plotly = "^5.9.0"
pandas = "^1.4.3"
dash-mantine-components = "^0.10.2"
dash-iconify = "^0.1.2"
dash = "^2.6.0"
numpy = "^1.23.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
